--- a/Linkedin Final Data Sci Proj.ipynb
+++ b/Linkedin Final Data Sci Proj.ipynb
@@ -267,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us continue with a seaborn correlation heatmap. This will show us the variables most correlated to each other in this dataset"
+    "**Let us continue with a seaborn correlation heatmap. This will show us the variables most correlated to each other in this dataset**"
    ]
   },
   {
@@ -313,7 +313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see here that likes and impressions are very correlated to each other, meaning that high impression posts will also have more likes according to our data. Shares also stands out as pretty important metric. Comments, on the other hand, seem to be lowly correlated to likes and impressions. Here is this info displayed in graph format"
+    "**We can see here that likes and impressions are very correlated to each other, meaning that high impression posts will also have more likes according to our data. Shares also stands out as pretty important metric. Comments, on the other hand, seem to be lowly correlated to likes and impressions. Here is this info displayed in graph format**"
    ]
   },
   {
@@ -344,9 +344,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Let us now "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -384,7 +382,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us now create a video vs not video comparison: \n"
+    "**Let us now create a video vs not video comparison:**\n"
    ]
   },
   {
@@ -747,7 +745,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us get the mean for all desired outcomes"
+    "**Let us get the mean for all desired outcomes**"
    ]
   },
   {
@@ -806,7 +804,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interesting Data! We see that Impressions are almost double in video formats, Likes are 50% higher, but engagement and clicks are much lower!"
+    "**Interesting Data! We see that Impressions are almost double in video formats, Likes are 50% higher, but engagement and clicks are much lower!**"
    ]
   },
   {
