--- a/Linkedin Final Data Sci Proj.ipynb
+++ b/Linkedin Final Data Sci Proj.ipynb
@@ -1051,7 +1051,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets import Linkedin Follower data"
+    "#Lets import Linkedin Follower data"
    ]
   },
   {
